# spikesift

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  example_usage.rst  implementation.rst  index.rst  installation.rst  overview.rst  performance.rst  user_guide.rst
docs/source/implementation/: adaptive_segmentation.rst  binary_splitting_clustering.rst  difference_of_gaussians.rst  iterative_sorting.rst  segment_merging.rst  template_formation.rst  template_matching.rst
docs/source/user_guide/: parameter_tuning.rst  recording_setup.rst
spikesift/: __init__.py  _core.py  core.py
spikesift/_cython/: alignment.pyx  clustering.pyx  detection.pyx  preprocessing.pyx  subtraction.pyx
tests/: test_map_clusters.py  test_merge_recordings.py  test_recording.py  test_sorted_recording.py
