[metadata]
name = spikesift
version = 0.1.2
author = Vasileios Georgiadis
description = Real-time spike sorting for high-density extracellular recordings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vasilisgeorgiadis/spikesift
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Cython
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    tqdm
python_requires = >=3.6

[options.package_data]
spikesift._cython = *.pyd, *.so

[build_ext]
inplace = 0
